@@ -6,6 +6,6 @@
     <setting label="10004" type="bool" id="szeengname" default="false" enable="eq(-1,false)"/>
     <setting type="sep"/>
     <setting label="10005" type="bool" id="szregional" default="true" />
-    <setting label="10006" type="select" values="cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|tr|zh" id="szregionallang" default="cs" enable="!eq(-1,false)" />
+    <setting label="10006" type="select" values="cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sk|sv|tr|zh" id="szregionallang" default="cs" enable="!eq(-1,false)" />
     <setting label="10010" type="bool" id="szposter" default="false" />
 </settings>
